tests/failing/generic_lambda_body_mismatch.rgo
int: @/int
str: @/str
exit: @/exit

foo: <T, U>(x:T, y:U, ok:(T, U)){
    ok(y, x) // wrong order here
}

done: (a:int, b:str){
    exit(0)
}

foo(1, "bad", done)
